@@ -1,5 +1,11 @@
 Changes with Apache 2.0.22-dev
 
+  *) Improve the exports generating awk script.  In the past, we had
+     work around problems in the awk script by avoiding some #if and
+     #ifdefs.  This has bitten us many times in generating the exports.c
+     file.  This improvement allows corrects the header file parsing.
+     [Sander Striker <striker@apache.org>]
+
 Changes with Apache 2.0.21
 
   *) Introduce connection sub-pools into ab.  Truncating the lifetime
